Simple Web Server JAVA

--- a/src/main/java/WebFiles/index.html
+++ b/src/main/java/WebFiles/index.html
@@ -18,10 +18,12 @@
                 <h1 class="welcome welcome-logo-Insta logo-Insta mt-5">localhost</h1>
                 <h1 class="welcome logo-Portfolio">Web Server</h1>
                 <p class="welcome-tagline logo-tagline mt-4 mb-5">Port: 7070</p>
-                <p class="welcome-tagline logo-tagline mt-4 mb-5">HTTP/1.1 200 OKAY</br>
+                <p class="welcome-tagline logo-tagline mt-4 mb-5">Status Code: 200 OKAY<br>
                     Server: Web Server<br>
+                    Request URL: http://localhost:7070/<br>
+                    Request Method: GET<br>
                     File: /src/main/java/WebFiles/index.html<br>
-                    Type: text/html<br>
+                    Content-Type: text/html<br>
                 </p>
             </div>
             <div class="buttons">
@@ -30,7 +32,7 @@
                         <a href="localhost:7070" class="btn welcome-login btn-block btn-login-signup">HOME</a>
                     </div>
                     <div class="col-6">
-                        <a href="/json" class=" welcome-login btn btn-block btn-login-signup">/JSON</a>
+                        <a href="/json" target="_blank" class=" welcome-login btn btn-block btn-login-signup">/JSON</a>
                     </div>
                 </div>
             </div>
